--- a/index.mdx
+++ b/index.mdx
@@ -28,20 +28,8 @@ export default LandingLayout;
 
 <Jumbotron>
   <NavBar location={props.location} standalone={false} />
-  <H1>Redocly training</H1>
-  <H2>A starter developer portal with training exercises</H2>
-  <Flex p={20} justifyContent="center">
-    {/* <Button size="xlarge" to="https://app.redoc.ly">
-      Redocly app
-    </Button> */}
-     <Button variant="outlined" size="xlarge" to="developer-portal/index.md">
-      Get started
-    </Button>
-    {/* <Button variant="outlined" size="xlarge" to="https://redoc.ly/docs">
-      Docs
-    </Button> */}
-  </Flex>
-</Jumbotron>
+  <H1>Commbank Developer Portal</H1>
+  </Jumbotron>
 <Box my={25}>
   <SectionHeader>
     Create your <Emphasis> developer portal </Emphasis> today!
