Added a local and remote sample spec to verify integration of API spec into dev portal

--- a/developer-portal/mdx.mdx
+++ b/developer-portal/mdx.mdx
@@ -53,6 +53,7 @@ With Samples Panel:
 <OpenApiResponse definitionId="petstore" pointer="#/components/responses/PetResponse" />
 ```
 <OpenApiResponse definitionId="petstore" pointer="#/components/responses/PetResponse" />
+<OpenApiResponse definitionId="openapilocal" pointer="#/components/responses/CoyoteResponse" />
 
 Without Samples Panel:
 
