Updated side bars

--- a/developer-portal/mdx.mdx
+++ b/developer-portal/mdx.mdx
@@ -56,7 +56,7 @@ With Samples Panel:
 <OpenApiResponse definitionId="openapilocal" pointer="#/components/responses/CoyoteResponse" />
 <OpenApiResponse definitionId="sampleapi" pointer="#/components/responses/Coyote1Response" />
 <OpenApiResponse definitionId="openapi3.1.0" pointer="#/components/responses/Coyote2Response" />
-<OpenApiResponse definitionId="openapi3.1.0directdebit" pointer="#/components/responses/Coyote3Response" />
+<OpenApiResponse definitionId="openapidirectdebit" pointer="#/components/responses/Coyote3Response" />
 
 Without Samples Panel:
 
