Updated homepage URL

--- a/support/support.mdx
+++ b/support/support.mdx
@@ -6,7 +6,7 @@ Support Page Placeholder
 import { Catalog, Flex, WideTile, H1 } from '@redocly/developer-portal/ui';
 
 <Flex justifyContent="space-between">
-  <WideTile to="../../index.md" title="Home Page">
+  <WideTile to="../../" title="Home Page">
     Back to Home Page
   </WideTile>
 </Flex>
