Updated homepage URL

--- a/apis.mdx
+++ b/apis.mdx
@@ -6,7 +6,7 @@ title: API Catalog
 import { Catalog, Flex, WideTile } from '@redocly/developer-portal/ui';
 
 <Flex justifyContent="space-between">
-  <WideTile to="developer-portal/index.md" title="Home Page">
+  <WideTile to="../" title="Home Page">
     Home Page
   </WideTile>
 </Flex>
